2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/pic16/pcode.c,
	  src/pic16/pcodepeep.c:
	  More use the logical constants.

2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/pcoderegs.c,
	  src/pic14/ralloc.c:
	  More use the logical constants.

2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/pic14/gen.c,
	  src/pic14/pcode.c,
	  src/pic14/pcode.h:
	  Add support the ASRF, LSLF and LSRF instructions
	  (enhanced intructions of pic14): feature-requests #484

	* src/pic14/gen.c,
	  src/pic14/gen.h:
	  On more place I exchanged the "char *" to "const char *".

2016-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCC.y
	* src/SDCCast.c
	* src/SDCCast.h
	* src/SDCCutil.c
	* src/SDCCutil.h
	  Format inline asm coding style.

2016-01-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* debugger/mcs51/configure
	* debugger/mcs51/configure.ac
	* support/cpp/configure
	* support/cpp/configure.ac
	* support/packihx/configure
	* support/packihx/configure.ac
	  Try to use C99 first.
	* src/SDCC.lex
	  Remove a duplicate function definition.
	* src/SDCC.y
	  Change to C99 style.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCglue.h,
	  src/SDCCglue.c:
	  Do not display meaningless __reentrent to users.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Make estimate for preserved regs on function pointers less conservative.
	* src/SDCCsymt.c:
	  Consider preserved regs for type of function pointer.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of conditional jumps, handle ex (sp), ix and ex (sp), iy.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Seems we have to worry about more than MSVC wrt. C99, patch #265 by Peter Dons Tychsen.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>
